--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>GenconBuddy</title>
+    <title>Gen Con Buddy</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/gencon-buddy.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/gen-con-buddy.css">
 
     {{content-for "head-footer"}}
   </head>
@@ -17,7 +17,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/gencon-buddy.js"></script>
+    <script src="{{rootURL}}assets/gen-con-buddy.js"></script>
 
     {{content-for "body-footer"}}
   </body>
